Upadated home url in menu and picture layout for chapter 1 in my story

--- a/Styles/general.css
+++ b/Styles/general.css
@@ -400,6 +400,15 @@ section.five {
     .project-image-container {
       margin: auto;
     }
+
+    #c1desc {
+      width: 100%;
+    }
+
+    .farewellimage {
+      width: 100%;
+      height: auto;
+    }
     
     .project-image-container .project-image {
       height: 580px;
